--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource-variable/noto-sans": "^5.0.5",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
     "awesome-sauce": "^1.0.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
