--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "20.14.9",
-    "typescript": "5.5.2"
+    "@next/eslint-plugin-next": "^14.2.5",
+    "@types/node": "20.14.9"
   }
 }
