--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fontsource-variable/noto-sans": "^5.0.5",
+    "@fontsource-variable/noto-sans": "^5.2.10",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
-    "awesome-sauce": "^1.0.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -28,6 +27,7 @@
     "@types/node": "20.14.9",
     "@types/react": "^18.3.28",
     "@types/react-dom": "^18.3.7",
+    "depcheck": "^1.4.7",
     "typescript": "5.9.3"
   }
 }
